--- a/web_chat_messenger/Views/Home/Cadastro.cshtml
+++ b/web_chat_messenger/Views/Home/Cadastro.cshtml
@@ -10,18 +10,20 @@
     </style>
 }
 
-<div class="container-login">
+<div id="formCadastro" class="container-login">
     <img src="~/imagem/logo.png" />
     <h1>ZapWeb</h1>
     <div class="container-form">
-        <input type="text" placeholder="Nome" />
+        <input id="nome" type="text" placeholder="Nome" />
         <br />
-        <input type="text" placeholder="E-mail" />
+        <input id="email" type="text" placeholder="E-mail" />
         <br />
-        <input type="text" placeholder="Senha" />
+        <input id="senha" type="text" placeholder="Senha" />
 
         <div class="container-button">
-            <input type="button" value="CADASTRAR" />
+            <input id="btnCadastrar" type="button" value="CADASTRAR" />
         </div>
     </div>
+
+    <span id="campo-mensagem"></span>
 </div>
