--- a/web_chat_messenger/Views/Home/Login.cshtml
+++ b/web_chat_messenger/Views/Home/Login.cshtml
@@ -10,17 +10,19 @@
     </style>
 }
 
-<div class="container-login">
+<div id="formLogin" class="container-login">
     <img src="/imagem/logo.png" />
     <h1>ZapWeb</h1>
     <div class="container-form">
-        <input type="text" placeholder="E-mail" />
+        <input id="email" type="text" placeholder="E-mail" />
         <br />
-        <input type="text" placeholder="Senha" />
+        <input id="senha" type="text" placeholder="Senha" />
 
         <div class="container-button">
-            <input type="button" value="ACESSAR" />
+            <input id="btnAcessar" type="button" value="ACESSAR" />
             <input type="button" value="CADASTRAR" />
         </div>
     </div>
+
+    <span id="mensagem"></span>
 </div>
