Adiciona id na tag

--- a/web_chat_messenger/Views/Home/Conversacao.cshtml
+++ b/web_chat_messenger/Views/Home/Conversacao.cshtml
@@ -31,7 +31,7 @@
 </div>
 
 <!-- Page content -->
-<div class="main">
+<div id="paginaConversacao" class="main">
     <div class="container-messages">
         <div class="message message-left">
             <div class="message-head">
