Implementa recurso para sair da aplicação

--- a/web_chat_messenger/Views/Home/Conversacao.cshtml
+++ b/web_chat_messenger/Views/Home/Conversacao.cshtml
@@ -10,6 +10,7 @@
 <div class="sidenav">
     <div class="container-logo">
         <img src="~/imagem/logo.png" style="width: 50%;" />
+        <a id="btnSair" href="#">Sair</a>
     </div>
     <div id="users">
         <div class="container-user-item">
