Adiciona Id ao campo

--- a/web_chat_messenger/Views/Home/Login.cshtml
+++ b/web_chat_messenger/Views/Home/Login.cshtml
@@ -20,7 +20,7 @@
 
         <div class="container-button">
             <input id="btnAcessar" type="button" value="ACESSAR" />
-            <input type="button" value="CADASTRAR" />
+            <input id="btnCadastrar" type="button" value="CADASTRAR" />
         </div>
     </div>
 
