--- a/web_chat_messenger/wwwroot/css/main.css
+++ b/web_chat_messenger/wwwroot/css/main.css
@@ -2,6 +2,7 @@ body {
     font-family: sans-serif;
     margin: 0px;
 }
+
 .container-login {
     margin: 0 auto;
     text-align: center;
@@ -14,52 +15,66 @@ body {
     margin-top: 100px;
     text-align: center;
 }
+
 .container-form {
     margin-top: 100px;
 }
+
 .container-button {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
+
 .container-logo {
     text-align: center;
     width: 320px;
 }
+
 .container-user-item {
     color: white;
     display: flex;
     flex-direction: row;
     justify-content: left;
-    padding: 35px 35px 0px 35px;
+    margin: 35px 35px 0px 35px;
     align-items: center;
 }
-.container-user-item span {
-    margin-left: 20px;
-    font-size: 20px;
-}
-.container-user-item .email {
-    color: lightgray;
-}
+
+    .container-user-item:hover {
+        cursor: pointer;
+    }
+
+    .container-user-item span {
+        margin-left: 20px;
+        font-size: 20px;
+    }
+
+    .container-user-item .email {
+        color: lightgray;
+    }
+
 .container-messages {
     overflow: auto;
     height: calc(100vh - 80px);
 }
+
 .container-list {
     text-align: center;
 }
+
 .container-list-plus {
     padding: 20px;
     margin: 10px;
     border: 1px solid white;
     color: white;
 }
-.container-list-plus span {
-    display: block;
-    margin-bottom: 10px;
-    
-}
+
+    .container-list-plus span {
+        display: block;
+        margin-bottom: 10px;
+    }
+
 input[type=text] {
     background-color: #267848;
     color: white;
@@ -70,12 +85,15 @@ input[type=text] {
     width: 100%;
     font-size: 18px;
 }
-input[type=text]::placeholder {
-    color: white;
-}
+
+    input[type=text]::placeholder {
+        color: white;
+    }
+
 input[type=button]:hover, .btn-send:hover {
     background-color: #1D5C37;
 }
+
 input[type=button], .btn-send {
     background-color: #267848;
     color: white;
@@ -85,6 +103,7 @@ input[type=button], .btn-send {
     width: 33%;
     font-size: 18px;
 }
+
 .btn-send {
     width: 70px;
     border-radius: 30px;
@@ -112,13 +131,16 @@ input[type=button], .btn-send {
     float: left;
     text-align: start;
 }
+
 .message-right {
     float: right;
     text-align: end;
 }
+
 .message-head {
     background-color: white;
 }
+
 .message-message {
     margin-top: 15px;
     margin-bottom: 5px;
@@ -136,30 +158,35 @@ input[type=button], .btn-send {
     background-color: #32A060; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #F2F2F2;
-    display: block;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: white;
-  }
-  
-  /* Style page content */
-  .main {
+}
+
+    /* The navigation menu links */
+    .sidenav a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #F2F2F2;
+        display: block;
+    }
+
+        /* When you mouse over the navigation links, change their color */
+        .sidenav a:hover {
+            color: white;
+        }
+
+/* Style page content */
+.main {
     margin-left: 320px; /* Same as the width of the sidebar */
     padding: 0px 10px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+        .sidenav a {
+            font-size: 18px;
+        }
+}
