Adiciona identificadores nas tags

--- a/web_chat_messenger/Views/Home/Conversacao.cshtml
+++ b/web_chat_messenger/Views/Home/Conversacao.cshtml
@@ -44,8 +44,7 @@
     </div>
 
     <div class="container-button">
-        <input type="text" placeholder="Mensagem" />
-        <button class="btn-send"></button>
+        <input id="mensagem" type="text" placeholder="Mensagem" />
+        <button id="btnEnviar" class="btn-send"></button>
     </div>
-
 </div>
