Remove código desnecessário e implementa mensagem de aviso

--- a/web_chat_messenger/Views/Home/Conversacao.cshtml
+++ b/web_chat_messenger/Views/Home/Conversacao.cshtml
@@ -20,24 +20,9 @@
 <!-- Page content -->
 <div id="paginaConversacao" class="main">
     <div class="container-messages">
-        <div class="message message-left">
-            <div class="message-head">
-                <img src="~/imagem/chat.png" />
-                Aline
-            </div>
-            <div class="message-message">
-                Olá José! Como vai?
-            </div>
-        </div>
-        <div class="message message-right">
-            <div class="message-head">
-                <img src="~/imagem/chat.png" />
-                Eu
-            </div>
-            <div class="message-message">
-                Olá José! Como vai?
-            </div>
-        </div>
+        <center>
+            <h3>Abra uma conversa existente ou inicie uma nova! ;)</h3>
+        </center>
     </div>
 
     <div class="container-button">
