--- a/web_chat_messenger/Views/Home/Conversacao.cshtml
+++ b/web_chat_messenger/Views/Home/Conversacao.cshtml
@@ -3,6 +3,10 @@
         body {
             background-color: #F0F0F0;
         }
+
+        .container-button {
+            display: none;
+        }
     </style>
 }
 
