--- a/web_chat_messenger/wwwroot/css/main.css
+++ b/web_chat_messenger/wwwroot/css/main.css
@@ -24,7 +24,7 @@ body {
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
-    display: none;
+    display: flex;
 }
 
 .container-logo {
