Altera estilização das páginas

--- a/web_chat_messenger/Views/Home/Cadastro.cshtml
+++ b/web_chat_messenger/Views/Home/Cadastro.cshtml
@@ -1,7 +1,7 @@
 ﻿@section style {
     <style type="text/css">
         body {
-            background-color: #32A060;
+            background-color: #5C158D;
         }
 
         input[type=text] {
@@ -12,7 +12,7 @@
 
 <div id="formCadastro" class="container-login">
     <img src="~/imagem/logo.png" />
-    <h1>ZapWeb</h1>
+    <h1>Chat Messenger</h1>
     <div class="container-form">
         <input id="nome" type="text" placeholder="Nome" />
         <br />
