--- a/web_chat_messenger/wwwroot/css/main.css
+++ b/web_chat_messenger/wwwroot/css/main.css
@@ -76,7 +76,7 @@ body {
     }
 
 input[type=text] {
-    background-color: #267848;
+    background-color: #440E66;
     color: white;
     border-radius: 25px;
     border: none;
@@ -91,11 +91,12 @@ input[type=text] {
     }
 
 input[type=button]:hover, .btn-send:hover {
-    background-color: #1D5C37;
+    background-color: #FFF;
+    color: #440E66;
 }
 
 input[type=button], .btn-send {
-    background-color: #267848;
+    background-color: #440E66;
     color: white;
     border-radius: 25px;
     border: none;
@@ -157,7 +158,7 @@ input[type=button], .btn-send {
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: #32A060; /* Black */
+    background-color: #5C158D; /* Black */
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
 }
