Redefine estilização da aplicação

--- a/web_chat_messenger/Views/Home/Conversacao.cshtml
+++ b/web_chat_messenger/Views/Home/Conversacao.cshtml
@@ -1,7 +1,7 @@
 ﻿@section style {
     <style type="text/css">
         body {
-            background-color: #F0F0F0;
+            background-color: #0E1F66;
         }
 
         .container-button {
